# lex-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: plugin.json
commands/: lex-harness-fetch.md  lex-harness-setup.md
docs/: JURISDICTION_PACK_SPEC.md
docs/knowledge/: LEGAL_AI_FRAMEWORK.md  README.md  REQUIREMENTS.md
docs/knowledge/greece/: CORPUS_MAP.md  COURT_AUTHORITY.md  LAW_SOURCES.md
docs/research/: LEGAL_CORPUS_MAP.md
docs/superpowers/: EXECUTION_STATUS.md  HANDOFF_PROMPT.md
docs/superpowers/plans/: 2026-04-07-lex-harness-v0.1-part2.md  2026-04-07-lex-harness-v0.1-part3.md  2026-04-07-lex-harness-v0.1-part4.md  2026-04-07-lex-harness-v0.1.md  2026-04-08-scripts-layer.md
docs/superpowers/specs/: 2026-04-07-lex-harness-plugin-design.md  2026-04-08-scripts-knowledge-base-design.md
law-packs/: README.md  _schema.md
law-packs/greece/: MODULE_INDEX.md  forums.yaml  glossary.md  jurisdiction.yaml  limitation_periods.yaml  pack.json  playbook.yaml
law-packs/greece/core/: AK_173.md  AK_200.md  AK_249.md  AK_261.md  (+19 more)
scripts/: laws.py  populate_articles.py  pyproject.toml
scripts/core/: base.py  facade.py  registry.py  settings.py
scripts/greece/: __init__.py
scripts/greece/fetchers/: et_gr.py  gslegal.py  hellenicparliament.py  kodiko.py  raptarchis.py
scripts/shared/: eur_lex.py  n_lex.py
scripts/tests/: test_base.py  test_facade.py  test_jurisdiction_yaml.py  test_registry.py  test_settings.py
scripts/tests/integration/: test_fetch_live.py
scripts/tools/: lint_knowledge.py
(+19 files in other folders)
